--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
             </div>
             <ul>
                 <li>HOME</li>
-                <li>ROOMS</li>
-                <li>GALLERY</li>
-                <li>EVENTS</li>
+                <li>ROOMS<i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                </li>
+                <li>GALLERY<i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                </li>
+                <li>EVENTS<i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                </li>
                 <li>ABOUT</li>
                 <li>CONTACT</li>
 
